test/cbmc/negative_tests/bounds_check/bounds_check_harness.c
../../aws-templates-for-cbmc-proofs/template-for-repository/negative_tests/bounds_check/bounds_check_harness.c